--- a/nuget/SQLite-redist.nuspec
+++ b/nuget/SQLite-redist.nuspec
@@ -9,9 +9,9 @@
         <licenseUrl>https://raw.github.com/micahl/SQLite-WinRT-redist/master/LICENSE</licenseUrl>
         <projectUrl>https://github.com/micahl/SQLite-WinRT-redist</projectUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
-        <description>This is a redistribution of the binaries from the "SQLite for Windows Runtime (Windows 8.1) Extension SDK" packaged NuGet-style. Unlike the Extension SDK, this installs the binaries per-project versus per-machine.  If it detects the Extension SDK (http://www.sqlite.org/2014/sqlite-winrt81-3080401.vsix) is installed on the machine then it will add it as a reference and gracefully uninstall itself.  This package is compatible with the Windows 8.1 platform.</description>
+        <description>This is a redistribution of the "SQLite for Windows Runtime (Windows 8.1) Extension SDK" packaged NuGet-style. This package is compatible with the Windows 8.1 platform.</description>
         <summary>A redistribution of the binaries from the "SQLite for Windows Runtime (Windows 8.1) Extension SDK" packaged NuGet-style.</summary>
-        <releaseNotes>v1.0.2: Update to install SQLite.3.8.4.1
+        <releaseNotes>v1.0.2: Upgrade to 3.8.4.1. This package no longer distributes individual binaries in favor of wrapping installation for the SQLite for Windows Runtime Extension SDK (.vsix).  This means it installs/upgrades per-machine rather than per-project.  This package no longer removes itself automatically to make it easier to see when updates are available.
 v1.0.1: Fixed bug in detecting whether the Extension SDK is installed
 v1.0.0: Initial package for SQLite 3.8.3.1</releaseNotes>
         <tags>sqlite sql winrt database metro</tags>
